daedalus_parser/grammar/DaedalusParser.ts
// Generated from ./grammar/Daedalus.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { DaedalusListener } from "./DaedalusListener";
import { DaedalusVisitor } from "./DaedalusVisitor";


export class DaedalusParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly T__26 = 27;
	public static readonly T__27 = 28;
	public static readonly T__28 = 29;
	public static readonly T__29 = 30;
	public static readonly T__30 = 31;
	public static readonly T__31 = 32;
	public static readonly T__32 = 33;
	public static readonly Const = 34;
	public static readonly Var = 35;
	public static readonly If = 36;
	public static readonly Int = 37;
	public static readonly Else = 38;
	public static readonly Func = 39;
	public static readonly String = 40;
	public static readonly Class = 41;
	public static readonly Void = 42;
	public static readonly Return = 43;
	public static readonly Float = 44;
	public static readonly Prototype = 45;
	public static readonly Instance = 46;
	public static readonly Null = 47;
	public static readonly NoFunc = 48;
	public static readonly While = 49;
	public static readonly Break = 50;
	public static readonly Continue = 51;
	public static readonly Extern = 52;
	public static readonly Identifier = 53;
	public static readonly IntegerLiteral = 54;
	public static readonly FloatLiteral = 55;
	public static readonly StringLiteral = 56;
	public static readonly Whitespace = 57;
	public static readonly Newline = 58;
	public static readonly BlockComment = 59;
	public static readonly LineComment = 60;
	public static readonly UnexpectedCharacter = 61;
	public static readonly RULE_daedalusFile = 0;
	public static readonly RULE_blockDef = 1;
	public static readonly RULE_inlineDef = 2;
	public static readonly RULE_externFunctionDecl = 3;
	public static readonly RULE_functionDef = 4;
	public static readonly RULE_constDef = 5;
	public static readonly RULE_classDef = 6;
	public static readonly RULE_prototypeDef = 7;
	public static readonly RULE_instanceDef = 8;
	public static readonly RULE_instanceDecl = 9;
	public static readonly RULE_varDecl = 10;
	public static readonly RULE_constArrayDef = 11;
	public static readonly RULE_constArrayAssignment = 12;
	public static readonly RULE_constValueDef = 13;
	public static readonly RULE_constValueAssignment = 14;
	public static readonly RULE_varArrayDecl = 15;
	public static readonly RULE_varArrayAssignment = 16;
	public static readonly RULE_varValueDecl = 17;
	public static readonly RULE_varValueAssignment = 18;
	public static readonly RULE_parameterList = 19;
	public static readonly RULE_parameterDecl = 20;
	public static readonly RULE_statementBlock = 21;
	public static readonly RULE_statement = 22;
	public static readonly RULE_functionCall = 23;
	public static readonly RULE_assignment = 24;
	public static readonly RULE_elseBlock = 25;
	public static readonly RULE_elseIfBlock = 26;
	public static readonly RULE_ifBlock = 27;
	public static readonly RULE_ifBlockStatement = 28;
	public static readonly RULE_returnStatement = 29;
	public static readonly RULE_whileStatement = 30;
	public static readonly RULE_breakStatement = 31;
	public static readonly RULE_continueStatement = 32;
	public static readonly RULE_expression = 33;
	public static readonly RULE_arrayIndex = 34;
	public static readonly RULE_arraySize = 35;
	public static readonly RULE_value = 36;
	public static readonly RULE_referenceAtom = 37;
	public static readonly RULE_reference = 38;
	public static readonly RULE_dataType = 39;
	public static readonly RULE_nameNode = 40;
	public static readonly RULE_parentReference = 41;
	public static readonly RULE_assignmentOperator = 42;
	public static readonly RULE_addOperator = 43;
	public static readonly RULE_bitMoveOperator = 44;
	public static readonly RULE_compOperator = 45;
	public static readonly RULE_eqOperator = 46;
	public static readonly RULE_unaryOperator = 47;
	public static readonly RULE_multOperator = 48;
	public static readonly RULE_binAndOperator = 49;
	public static readonly RULE_binOrOperator = 50;
	public static readonly RULE_logAndOperator = 51;
	public static readonly RULE_logOrOperator = 52;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"daedalusFile", "blockDef", "inlineDef", "externFunctionDecl", "functionDef", 
		"constDef", "classDef", "prototypeDef", "instanceDef", "instanceDecl", 
		"varDecl", "constArrayDef", "constArrayAssignment", "constValueDef", "constValueAssignment", 
		"varArrayDecl", "varArrayAssignment", "varValueDecl", "varValueAssignment", 
		"parameterList", "parameterDecl", "statementBlock", "statement", "functionCall", 
		"assignment", "elseBlock", "elseIfBlock", "ifBlock", "ifBlockStatement", 
		"returnStatement", "whileStatement", "breakStatement", "continueStatement", 
		"expression", "arrayIndex", "arraySize", "value", "referenceAtom", "reference", 
		"dataType", "nameNode", "parentReference", "assignmentOperator", "addOperator", 
		"bitMoveOperator", "compOperator", "eqOperator", "unaryOperator", "multOperator", 
		"binAndOperator", "binOrOperator", "logAndOperator", "logOrOperator",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "';'", "','", "'{'", "'}'", "'('", "')'", "'['", "']'", "'='", 
		"'.'", "'+='", "'-='", "'*='", "'/='", "'+'", "'-'", "'<<'", "'>>'", "'<'", 
		"'>'", "'<='", "'>='", "'=='", "'!='", "'!'", "'~'", "'*'", "'/'", "'%'", 
		"'&'", "'|'", "'&&'", "'||'", undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, "'while'", "'break'", "'continue'", 
		"'extern'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, "Const", 
		"Var", "If", "Int", "Else", "Func", "String", "Class", "Void", "Return", 
		"Float", "Prototype", "Instance", "Null", "NoFunc", "While", "Break", 
		"Continue", "Extern", "Identifier", "IntegerLiteral", "FloatLiteral", 
		"StringLiteral", "Whitespace", "Newline", "BlockComment", "LineComment", 
		"UnexpectedCharacter",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(DaedalusParser._LITERAL_NAMES, DaedalusParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return DaedalusParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "Daedalus.g4"; }

	// @Override
	public get ruleNames(): string[] { return DaedalusParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return DaedalusParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(DaedalusParser._ATN, this);
	}
	// @RuleVersion(0)
	public daedalusFile(): DaedalusFileContext {
		let _localctx: DaedalusFileContext = new DaedalusFileContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, DaedalusParser.RULE_daedalusFile);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 110;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 1, this._ctx);
			while (_alt !== 1 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1 + 1) {
					{
					this.state = 108;
					this._errHandler.sync(this);
					switch ( this.interpreter.adaptivePredict(this._input, 0, this._ctx) ) {
					case 1:
						{
						this.state = 106;
						this.blockDef();
						}
						break;

					case 2:
						{
						this.state = 107;
						this.inlineDef();
						}
						break;
					}
					}
				}
				this.state = 112;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 1, this._ctx);
			}
			this.state = 113;
			this.match(DaedalusParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public blockDef(): BlockDefContext {
		let _localctx: BlockDefContext = new BlockDefContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, DaedalusParser.RULE_blockDef);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 119;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case DaedalusParser.Func:
				{
				this.state = 115;
				this.functionDef();
				}
				break;
			case DaedalusParser.Class:
				{
				this.state = 116;
				this.classDef();
				}
				break;
			case DaedalusParser.Prototype:
				{
				this.state = 117;
				this.prototypeDef();
				}
				break;
			case DaedalusParser.Instance:
				{
				this.state = 118;
				this.instanceDef();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 122;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === DaedalusParser.T__0) {
				{
				this.state = 121;
				this.match(DaedalusParser.T__0);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public inlineDef(): InlineDefContext {
		let _localctx: InlineDefContext = new InlineDefContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, DaedalusParser.RULE_inlineDef);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 128;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case DaedalusParser.Extern:
				{
				this.state = 124;
				this.externFunctionDecl();
				}
				break;
			case DaedalusParser.Const:
				{
				this.state = 125;
				this.constDef();
				}
				break;
			case DaedalusParser.Var:
				{
				this.state = 126;
				this.varDecl();
				}
				break;
			case DaedalusParser.Instance:
				{
				this.state = 127;
				this.instanceDecl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 130;
			this.match(DaedalusParser.T__0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public externFunctionDecl(): ExternFunctionDeclContext {
		let _localctx: ExternFunctionDeclContext = new ExternFunctionDeclContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, DaedalusParser.RULE_externFunctionDecl);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 132;
			this.match(DaedalusParser.Extern);
			this.state = 133;
			this.match(DaedalusParser.Func);
			this.state = 134;
			this.dataType();
			this.state = 135;
			this.nameNode();
			this.state = 136;
			this.parameterList();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public functionDef(): FunctionDefContext {
		let _localctx: FunctionDefContext = new FunctionDefContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, DaedalusParser.RULE_functionDef);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 138;
			this.match(DaedalusParser.Func);
			this.state = 139;
			this.dataType();
			this.state = 140;
			this.nameNode();
			this.state = 141;
			this.parameterList();
			this.state = 142;
			this.statementBlock();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public constDef(): ConstDefContext {
		let _localctx: ConstDefContext = new ConstDefContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, DaedalusParser.RULE_constDef);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 144;
			this.match(DaedalusParser.Const);
			this.state = 145;
			this.dataType();
			this.state = 148;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 5, this._ctx) ) {
			case 1:
				{
				this.state = 146;
				this.constValueDef();
				}
				break;

			case 2:
				{
				this.state = 147;
				this.constArrayDef();
				}
				break;
			}
			this.state = 157;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === DaedalusParser.T__1) {
				{
				{
				this.state = 150;
				this.match(DaedalusParser.T__1);
				this.state = 153;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 6, this._ctx) ) {
				case 1:
					{
					this.state = 151;
					this.constValueDef();
					}
					break;

				case 2:
					{
					this.state = 152;
					this.constArrayDef();
					}
					break;
				}
				}
				}
				this.state = 159;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public classDef(): ClassDefContext {
		let _localctx: ClassDefContext = new ClassDefContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, DaedalusParser.RULE_classDef);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 160;
			this.match(DaedalusParser.Class);
			this.state = 161;
			this.nameNode();
			this.state = 162;
			this.match(DaedalusParser.T__2);
			this.state = 168;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 8, this._ctx);
			while (_alt !== 1 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1 + 1) {
					{
					{
					this.state = 163;
					this.varDecl();
					this.state = 164;
					this.match(DaedalusParser.T__0);
					}
					}
				}
				this.state = 170;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 8, this._ctx);
			}
			this.state = 171;
			this.match(DaedalusParser.T__3);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public prototypeDef(): PrototypeDefContext {
		let _localctx: PrototypeDefContext = new PrototypeDefContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, DaedalusParser.RULE_prototypeDef);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 173;
			this.match(DaedalusParser.Prototype);
			this.state = 174;
			this.nameNode();
			this.state = 175;
			this.match(DaedalusParser.T__4);
			this.state = 176;
			this.parentReference();
			this.state = 177;
			this.match(DaedalusParser.T__5);
			this.state = 178;
			this.statementBlock();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public instanceDef(): InstanceDefContext {
		let _localctx: InstanceDefContext = new InstanceDefContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, DaedalusParser.RULE_instanceDef);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 180;
			this.match(DaedalusParser.Instance);
			this.state = 181;
			this.nameNode();
			this.state = 182;
			this.match(DaedalusParser.T__4);
			this.state = 183;
			this.parentReference();
			this.state = 184;
			this.match(DaedalusParser.T__5);
			this.state = 185;
			this.statementBlock();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public instanceDecl(): InstanceDeclContext {
		let _localctx: InstanceDeclContext = new InstanceDeclContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, DaedalusParser.RULE_instanceDecl);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 187;
			this.match(DaedalusParser.Instance);
			this.state = 188;
			this.nameNode();
			this.state = 193;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 9, this._ctx);
			while (_alt !== 1 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1 + 1) {
					{
					{
					this.state = 189;
					this.match(DaedalusParser.T__1);
					this.state = 190;
					this.nameNode();
					}
					}
				}
				this.state = 195;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 9, this._ctx);
			}
			this.state = 196;
			this.match(DaedalusParser.T__4);
			this.state = 197;
			this.parentReference();
			this.state = 198;
			this.match(DaedalusParser.T__5);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public varDecl(): VarDeclContext {
		let _localctx: VarDeclContext = new VarDeclContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, DaedalusParser.RULE_varDecl);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 200;
			this.match(DaedalusParser.Var);
			this.state = 201;
			this.dataType();
			this.state = 204;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 10, this._ctx) ) {
			case 1:
				{
				this.state = 202;
				this.varValueDecl();
				}
				break;

			case 2:
				{
				this.state = 203;
				this.varArrayDecl();
				}
				break;
			}
			this.state = 213;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === DaedalusParser.T__1) {
				{
				{
				this.state = 206;
				this.match(DaedalusParser.T__1);
				this.state = 209;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 11, this._ctx) ) {
				case 1:
					{
					this.state = 207;
					this.varValueDecl();
					}
					break;

				case 2:
					{
					this.state = 208;
					this.varArrayDecl();
					}
					break;
				}
				}
				}
				this.state = 215;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public constArrayDef(): ConstArrayDefContext {
		let _localctx: ConstArrayDefContext = new ConstArrayDefContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, DaedalusParser.RULE_constArrayDef);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 216;
			this.nameNode();
			this.state = 217;
			this.match(DaedalusParser.T__6);
			this.state = 218;
			this.arraySize();
			this.state = 219;
			this.match(DaedalusParser.T__7);
			this.state = 220;
			this.constArrayAssignment();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public constArrayAssignment(): ConstArrayAssignmentContext {
		let _localctx: ConstArrayAssignmentContext = new ConstArrayAssignmentContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, DaedalusParser.RULE_constArrayAssignment);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 222;
			this.match(DaedalusParser.T__8);
			this.state = 223;
			this.match(DaedalusParser.T__2);
			{
			this.state = 224;
			this.expression(0);
			this.state = 229;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 13, this._ctx);
			while (_alt !== 1 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1 + 1) {
					{
					{
					this.state = 225;
					this.match(DaedalusParser.T__1);
					this.state = 226;
					this.expression(0);
					}
					}
				}
				this.state = 231;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 13, this._ctx);
			}
			}
			this.state = 232;
			this.match(DaedalusParser.T__3);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public constValueDef(): ConstValueDefContext {
		let _localctx: ConstValueDefContext = new ConstValueDefContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, DaedalusParser.RULE_constValueDef);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 234;
			this.nameNode();
			this.state = 235;
			this.constValueAssignment();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public constValueAssignment(): ConstValueAssignmentContext {
		let _localctx: ConstValueAssignmentContext = new ConstValueAssignmentContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, DaedalusParser.RULE_constValueAssignment);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 237;
			this.match(DaedalusParser.T__8);
			this.state = 238;
			this.expression(0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public varArrayDecl(): VarArrayDeclContext {
		let _localctx: VarArrayDeclContext = new VarArrayDeclContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, DaedalusParser.RULE_varArrayDecl);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 240;
			this.nameNode();
			this.state = 241;
			this.match(DaedalusParser.T__6);
			this.state = 242;
			this.arraySize();
			this.state = 243;
			this.match(DaedalusParser.T__7);
			this.state = 245;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === DaedalusParser.T__8) {
				{
				this.state = 244;
				this.varArrayAssignment();
				}
			}
